tests/rgs/semantic_errors/undeclared_event.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN exploded ENVIRONMENT:
                DO run.
